# Fast-Marching-Method

./: .clang-format  .gitignore  CMakeLists.txt  README.md  velocity_function_gen.py
data/: value_function.h5  velocity_data.h5
examples/: CMakeLists.txt  example_1.cpp  hdf5_parser.cpp  hdf5_parser.hpp  main_example.cpp  main_script.py
include/: heap.hpp
scripts/: create_value_function.py  main_script.py  maze_value_function.py  measure_time_complexity.py  multiple_target_value_function.py  print_shortest_path.py  shortest_path.py  value_function.py
solver/: CMakeLists.txt
solver/include/fmm/: defs.hpp  function.hpp  heap.hpp  solver.hpp
solver/src/: function.hpp  heap.hpp  solver.cpp  solver.hpp
test/: CMakeLists.txt  test_heap.cpp  tests.cpp
